@@ -185,9 +185,12 @@ try:
 
 	if pynotify.init('Basics'):
 		def notification(message):
-			n = pynotify.Notification(NAME, message)
-			n.show()
-except ImportError:
+			try:
+				n = pynotify.Notification(NAME, message)
+				n.show()
+			except:
+				pass
+except:
 	pass
 
 
